  for the number of seconds of CPU time that can be taken up by
  function evaluations associated with a command.

- The new conf parameters guest_basename, guest_prefixes, guest_suffixes,
  and guest_password allow flexible naming of guests. See the FAQ for
  details. (The guest_prefix parameter is now obsolete, and has been
  removed.)

- The new conf parameter power_alias allows you to set aliases for
  powers. The compat.conf file now contains aliases for mapping PennMUSH
  and TinyMUX power names.

- The new conf parameter visible_wizards (disabled by default) results
  in DARK wizards being hidden from WHO (and related things), but not
  being invisible and silent. This prevents accidental or deliberate
  spying by DARK wizards.

- The new conf parameter wildcard_match_limit restricts how extensive
  of a recursive search is performed when attempting to match a pattern.

-----------------------------------------------------------------------------

CHANGES TO ATTRIBUTES

- @aconnect and @adisconnect attributes are triggered consistently on all
  connections and disconnections, with a reason in %0 and the player's
  resulting number of open connections in %1.

- Players can now specify multiple aliases for themselves (up to
  the conf parameter player_aliases_limit), via @alias, separating
  aliases with ';'. Players no longer inherit @alias from their
  parent (this never made sense, or worked properly, anyway).

- @conformat and @exitformat get their visible contents/exits lists
  passed as %0.

- A new attribute, LastIP, tracks the last IP address of a player.
  When Lastsite is set, the identd user and hostname are no longer
  truncated.

- The new attribute @nameformat controls the display of location's name
  when someone looks at the location.

- The format and text of a say and pose can be arbitrarily altered, via the
  @speechformat attribute and SPEECHMOD flag on the speaker, or the
  speaker's location.
