@@ -144,6 +144,9 @@ CHANGES TO CONFIGURATION PARAMETERS
   details. (The guest_prefix parameter is now obsolete, and has been
   removed.)
 
+- The new conf parameter huh_message lets you change the Huh? message
+  that is displayed when a command cannot be matched.
+
 - The new conf parameter power_alias allows you to set aliases for
   powers. The compat.conf file now contains aliases for mapping PennMUSH
   and TinyMUX power names.
